// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders not visible progress dialog 1`] = `
<View
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders visible progress dialog 1`] = `
<View
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      collapsable={undefined}
      style={
        Object {
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "backgroundColor": "rgba(0, 0, 0, .5)",
            },
          ]
        }
      />
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID={undefined}
      />
      <View
        collapsable={undefined}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          collapsable={undefined}
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
              },
              Object {
                "backgroundColor": "#ffffff",
              },
              Object {
                "shadowColor": "#000000",
                "shadowOffset": Object {
                  "height": 23,
                  "width": 0,
                },
                "shadowOpacity": 0.24,
                "shadowRadius": 24,
              },
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 2,
                "elevation": 24,
                "marginHorizontal": 26,
                "marginVertical": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "Helvetica Neue",
                },
                Array [
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontFamily": "HelveticaNeue-Medium",
                  },
                  Array [
                    Object {
                      "fontSize": 20,
                      "lineHeight": 30,
                      "marginVertical": 2,
                    },
                    Array [
                      Object {
                        "marginBottom": 18,
                        "marginHorizontal": 24,
                        "marginTop": 22,
                      },
                      Object {
                        "color": "#000000",
                      },
                      Object {
                        "color": undefined,
                      },
                    ],
                  ],
                  Array [
                    Object {
                      "fontSize": 20,
                      "lineHeight": 30,
                      "marginVertical": 2,
                    },
                    Array [
                      Object {
                        "marginBottom": 18,
                        "marginHorizontal": 24,
                        "marginTop": 22,
                      },
                      Object {
                        "color": "#000000",
                      },
                      Object {
                        "color": undefined,
                      },
                    ],
                  ],
                ],
              ]
            }
            theme={
              Object {
                "colors": Object {
                  "accent": "#ff4081",
                  "background": "#fafafa",
                  "disabled": "rgba(0, 0, 0, 0.26)",
                  "paper": "#ffffff",
                  "placeholder": "rgba(0, 0, 0, 0.38)",
                  "primary": "#3f51b5",
                  "text": "#000000",
                },
                "dark": false,
                "fonts": Object {
                  "light": "HelveticaNeue-Light",
                  "medium": "HelveticaNeue-Medium",
                  "regular": "Helvetica Neue",
                  "thin": "HelveticaNeue-Thin",
                },
                "roundness": 2,
              }
            }
          >
            Progress Dialog
          </Text>
          <View
            style={
              Array [
                Object {
                  "paddingBottom": 24,
                  "paddingHorizontal": 24,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <ActivityIndicator
                animating={true}
                color="#999999"
                hidesWhenStopped={true}
                size={48}
                style={
                  Object {
                    "marginRight": 16,
                  }
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "Helvetica Neue",
                    },
                    Array [
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "fontFamily": "Helvetica Neue",
                      },
                      Array [
                        Object {
                          "fontSize": 14,
                          "lineHeight": 20,
                          "marginVertical": 2,
                        },
                        Object {
                          "color": undefined,
                        },
                      ],
                      Array [
                        Object {
                          "fontSize": 14,
                          "lineHeight": 20,
                          "marginVertical": 2,
                        },
                        Object {
                          "color": undefined,
                        },
                      ],
                    ],
                  ]
                }
                theme={
                  Object {
                    "colors": Object {
                      "accent": "#ff4081",
                      "background": "#fafafa",
                      "disabled": "rgba(0, 0, 0, 0.26)",
                      "paper": "#ffffff",
                      "placeholder": "rgba(0, 0, 0, 0.38)",
                      "primary": "#3f51b5",
                      "text": "#000000",
                    },
                    "dark": false,
                    "fonts": Object {
                      "light": "HelveticaNeue-Light",
                      "medium": "HelveticaNeue-Medium",
                      "regular": "Helvetica Neue",
                      "thin": "HelveticaNeue-Thin",
                    },
                    "roundness": 2,
                  }
                }
              >
                Loading...
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible progress dialog with custom activity indicator color and style 1`] = `
<View
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      collapsable={undefined}
      style={
        Object {
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "backgroundColor": "rgba(0, 0, 0, .5)",
            },
          ]
        }
      />
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID={undefined}
      />
      <View
        collapsable={undefined}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          collapsable={undefined}
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
              },
              Object {
                "backgroundColor": "#ffffff",
              },
              Object {
                "shadowColor": "#000000",
                "shadowOffset": Object {
                  "height": 23,
                  "width": 0,
                },
                "shadowOpacity": 0.24,
                "shadowRadius": 24,
              },
              Object {
                "backgroundColor": "#999",
                "borderRadius": 2,
                "elevation": 24,
                "marginHorizontal": 26,
                "marginVertical": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "Helvetica Neue",
                },
                Array [
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontFamily": "HelveticaNeue-Medium",
                  },
                  Array [
                    Object {
                      "fontSize": 20,
                      "lineHeight": 30,
                      "marginVertical": 2,
                    },
                    Array [
                      Object {
                        "marginBottom": 18,
                        "marginHorizontal": 24,
                        "marginTop": 22,
                      },
                      Object {
                        "color": "#000000",
                      },
                      Object {
                        "color": undefined,
                      },
                    ],
                  ],
                  Array [
                    Object {
                      "fontSize": 20,
                      "lineHeight": 30,
                      "marginVertical": 2,
                    },
                    Array [
                      Object {
                        "marginBottom": 18,
                        "marginHorizontal": 24,
                        "marginTop": 22,
                      },
                      Object {
                        "color": "#000000",
                      },
                      Object {
                        "color": undefined,
                      },
                    ],
                  ],
                ],
              ]
            }
            theme={
              Object {
                "colors": Object {
                  "accent": "#ff4081",
                  "background": "#fafafa",
                  "disabled": "rgba(0, 0, 0, 0.26)",
                  "paper": "#ffffff",
                  "placeholder": "rgba(0, 0, 0, 0.38)",
                  "primary": "#3f51b5",
                  "text": "#000000",
                },
                "dark": false,
                "fonts": Object {
                  "light": "HelveticaNeue-Light",
                  "medium": "HelveticaNeue-Medium",
                  "regular": "Helvetica Neue",
                  "thin": "HelveticaNeue-Thin",
                },
                "roundness": 2,
              }
            }
          >
            Progress Dialog
          </Text>
          <View
            style={
              Array [
                Object {
                  "paddingBottom": 24,
                  "paddingHorizontal": 24,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <ActivityIndicator
                animating={true}
                color="#BADA55"
                hidesWhenStopped={true}
                size="small"
                style={
                  Object {
                    "marginRight": 16,
                  }
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "Helvetica Neue",
                    },
                    Array [
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "fontFamily": "Helvetica Neue",
                      },
                      Array [
                        Object {
                          "fontSize": 14,
                          "lineHeight": 20,
                          "marginVertical": 2,
                        },
                        Object {
                          "color": undefined,
                        },
                      ],
                      Array [
                        Object {
                          "fontSize": 14,
                          "lineHeight": 20,
                          "marginVertical": 2,
                        },
                        Object {
                          "color": undefined,
                        },
                      ],
                    ],
                  ]
                }
                theme={
                  Object {
                    "colors": Object {
                      "accent": "#ff4081",
                      "background": "#fafafa",
                      "disabled": "rgba(0, 0, 0, 0.26)",
                      "paper": "#ffffff",
                      "placeholder": "rgba(0, 0, 0, 0.38)",
                      "primary": "#3f51b5",
                      "text": "#000000",
                    },
                    "dark": false,
                    "fonts": Object {
                      "light": "HelveticaNeue-Light",
                      "medium": "HelveticaNeue-Medium",
                      "regular": "Helvetica Neue",
                      "thin": "HelveticaNeue-Thin",
                    },
                    "roundness": 2,
                  }
                }
              >
                Loading...
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
